# thesis

./: README.md
install/: local_setup.sh  setup.sh
install/include/mg400_common/: mg400_ik_util.hpp
install/include/mg400_interface/: command_utils.hpp  error_msg_generator.hpp  joint_handler.hpp  mg400_interface.hpp
install/include/mg400_joy/: mg400_joy_interface_node.hpp
install/include/mg400_node/: mg400_node.hpp
install/include/mg400_plugin/: plugin_utils.hpp
install/include/mg400_plugin_base/: api_loader_base.hpp  api_plugin_base.hpp
install/include/mg400_rviz_plugin/: panel_mg400_controller.hpp
install/include/p9n_example/: display_node.hpp
install/include/p9n_interface/: hw_types.hpp  p9n_interface.hpp  ps3_dualshock3.hpp  ps4_dualshock4.hpp  ps5_dualsense.hpp
install/include/p9n_node/: teleop_twist_joy_node.hpp
install/include/p9n_test/: p9n_test_node.hpp  workflow_handler.hpp
install/lib/mg400_interface/: commander_check  show_realtime_data
install/lib/mg400_joy/: mg400_joy_interface_node_exec
install/lib/mg400_node/: joint_command_publisher_gui  joint_state_publisher_gui  mg400_node_exec
install/lib/p9n_example/: display_node_exec
install/lib/p9n_node/: teleop_twist_joy_node_exec
install/lib/p9n_test/: p9n_test_node_exec
install/share/mg400/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/mg400_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/mg400_common/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/mg400_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/mg400_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/mg400_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/mg400_joy/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/mg400_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/mg400_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/mg400_plugin/: dashboard_api_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  motion_api_plugins.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/mg400_plugin_base/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/mg400_rviz_plugin/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  plugins_description.xml
install/share/mg400_thesis/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/p9n/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
mg400_controller/: CMakeLists.txt  package.xml
mg400_controller/config/: mg400_controllers.yaml
mg400_description/urdf/: mg400.urdf.xacro
mg400_thesis/: package.xml  setup.cfg  setup.py
mg400_thesis/launch/: gazebo.launch.py
mg400_thesis/urdf/: mg400_control.xacro  mg400_gazebo.xacro
mg400_thesis/worlds/: mg400.world
src/mg400_controller/: CMakeLists.txt  package.xml
src/mg400_controller/config/: mg400_controllers.yaml
src/mg400_thesis/: package.xml  setup.cfg  setup.py
src/mg400_thesis/launch/: gazebo.launch.py
src/mg400_thesis/worlds/: mg400.world
(+1068 files in other folders)
