<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mg400_thesis</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="olha@todo.todo">olha</maintainer>
  <license>TODO: License declaration</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_cmake</depend>
  <depend>xacro</depend>
  <depend>mg400_control</depend>
  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>robot_state_publisher</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>