<?xml version="1.0"?>
<package format="3">
  <name>mg400_thesis</name>
  <version>0.1.0</version>
  <description>Gazebo simulation for Dobot MG400 with ROS 2 Humble</description>
  <maintainer email="olleshchak@gmail.com">olha</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>mg400_description</depend>      <!-- NEW -->
  <depend>mg400_controller</depend>

  <!-- Linting & tests -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>